--- a/templates/protostar/css/template.css
+++ b/templates/protostar/css/template.css
@@ -7039,7 +7039,7 @@ body.site.fluid {
 	max-width: 960px;
 }
 .body .container {
-	background-color: #D2D2D2;
+	background-color: #9E9E9E;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
@@ -7499,4 +7499,7 @@ body.modal-open {
 }
 #users-profile-custom label {
 	display: inline;
+}
+.footer{
+color: #fff;
 }
