--- a/templates/protostar/css/template.css
+++ b/templates/protostar/css/template.css
@@ -3200,6 +3200,7 @@ input[type="submit"].btn.btn-mini {
 	margin-bottom: 18px;
 	*position: relative;
 	*z-index: 2;
+ 
 }
 .navbar-inner {
 	min-height: 40px;
@@ -3233,6 +3234,7 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar .container {
 	width: auto;
+	
 }
 .nav-collapse.collapse {
 	height: auto;
@@ -6980,10 +6982,10 @@ body {
 body.site {
 	border-top: 3px solid #0088cc;
 	padding: 20px;
-	background-color: #f4f6f7;
+	background-color: #FFF;
 }
 body.site.fluid {
-	background-color: #ffffff;
+	background-color: #FFFFFF;
 }
 .thumbnail {
 	margin-bottom: 9px;
@@ -6995,6 +6997,7 @@ body.site.fluid {
 	font-size: 40px;
 	line-height: 48px;
 	font-weight: bold;
+  	color: #070b1b;
 }
 .brand {
 	color: #004466;
@@ -7036,7 +7039,7 @@ body.site.fluid {
 	max-width: 960px;
 }
 .body .container {
-	background-color: #fff;
+	background-color: #9E9E9E;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
@@ -7496,4 +7499,7 @@ body.modal-open {
 }
 #users-profile-custom label {
 	display: inline;
+}
+.footer{
+color: #fff;
 }
